[gd_scene load_steps=5 format=3 uid="uid://dpwvnox347p7p"]

[ext_resource type="Script" path="res://scene/character/Melee_Projectile.gd" id="1_u5u1h"]
[ext_resource type="Texture2D" uid="uid://dmmxov01jvjnq" path="res://assets/character/MeleeProjectile/spritesheet.png" id="2_d6mr2"]

[sub_resource type="Animation" id="Animation_w683c"]
resource_name = "melee_slash"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.11, 0.16, 0.21, 0.26, 0.31, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-26, 3, -37, 0, 0, 0), PackedVector2Array(-32, 23, -38, 13, -38, 0, 0, 0), PackedVector2Array(-32, 27, -37, 11, 0, 0, -14, 43, -24, 36), PackedVector2Array(-26, 39, -36, 25, -19, 20, 0, 0, 4, 44, -10, 46), PackedVector2Array(4.76837e-07, 47, -7, 35, 4.76837e-07, 29, 0, 0, 26, 35, 16, 43), PackedVector2Array(20, 19, 0, 0, 40, 21, 35, 31), PackedVector2Array(15, 10, 0, 0, 46, 3, 44, 15, 23, 11), PackedVector2Array(0, 0, 43, -3, 44, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxs17"]
_data = {
"melee_slash": SubResource("Animation_w683c")
}

[node name="MeleeProjectile" type="Area2D"]
collision_layer = 32
collision_mask = 70
script = ExtResource("1_u5u1h")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-4.76837e-07, 0)
polygon = PackedVector2Array(-26, 3, -37, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rxs17")
}

[node name="MeleeCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, 7.62939e-06)
rotation = 0.261799
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_d6mr2")
offset = Vector2(-45.465, 145.205)
hframes = 8

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="MeleeCooldown" to="." method="_on_melee_cooldown_timeout"]
